# Epic-Games-Claimer

./: .env.example  .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  epic_games_claimer.py  install.sh  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
docs/: ARCHITECTURE.md  CLOUDFLARE_ISSUE.md  NEXT_STEPS.txt  REFACTORING_COMPLETE.txt  REFACTORING_SUMMARY.md  RENEW_TOKEN.md  SECURITY.md  SETUP_CF_CLEARANCE.md  SOLUTION_SUMMARY.md  STATUS.md  http-flow.md
legacy/: README.md  debug_cf.py  debug_chrome.py  debug_free_games.py  debug_graphql.py  diagnose.py  epic_games_claimer.py  epic_games_claimer_backup.py  epic_games_logger.py  extract_cookies.py  get_cf_clearance.py  get_cookies.py  get_free_games_improved.py  install.bat  setup_playwright.py  test_bc3.py
scripts/: autostart.bat  benchmark.py  force_error.py  get_cookies.py  login.py  run.bat  run.sh  run_scheduled.bat  run_scheduled.sh
src/: __init__.py  api.py  browser.py  chrome_cookies.py  claimer.py  config.py  logger.py  models.py  playwright_cookies.py  scheduler.py  session_store.py
tests/: __init__.py  conftest.py  test_extended_wait.py
